--- a/client/views/home.html
+++ b/client/views/home.html
@@ -12,7 +12,7 @@
 			<div class="row">
 				<div id="home-text" class="col-md-10 col-md-push-1">
 					<h2>Sunnah Source is a community managed resource allowing you to search the Quran, Sunnah and authentic works of Islamic scholars.</h2>
-					<h4>Want to contribute?  Sign-in with your Facebook or Google at the top!</h4>
+					<h4>Want to contribute?  Login with your Facebook or Google at the top!</h4>
 				</div>
 			</div>
 		</div>
