--- a/client/main.css
+++ b/client/main.css
@@ -8,14 +8,14 @@ html {
 }
 body {
 	/* Margin bottom by footer height */
-	margin-bottom: 50px;
+	margin-bottom: 90px;
 }
 footer {
 	position: absolute;
-	bottom: 0;
+	bottom: 0px;
 	width: 100%;
 	/* Set the fixed height of the footer here */
-	height: 50px;
+	height: 62px;
 	background: rgba(1,1,1,.8) !important;
 	border-top: 1px solid green !important;
 }
