initial completion of sitetext and translate ability

--- a/client/views/adminTranslateLanguages.html
+++ b/client/views/adminTranslateLanguages.html
@@ -36,7 +36,7 @@
 						</tr>
 						{{/each}}
 						<tr class="tss">
-							<td>Add Language</td>
+							<td><a id="add-lang"><i class="fa fa-plus-circle"></i> Add Language</a></td>
 							<td>&nbsp;</td>
 							<td>&nbsp;</td>
 							<td>&nbsp;</td>
