adding sitetext multilingual to home page

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -4,15 +4,15 @@
 			<div class="row center">
 				<div id="home-search" class="col-md-6 col-md-push-3">
 					<div class="input-group input-group-lg">
-						<input id="search" class="form-control" type="text" placeholder="Search coming soon." aria-describedby="search-btn" disabled>
+						<input id="search" class="form-control" type="text" placeholder="{{t 'hos'}}" aria-describedby="search-btn" disabled>
 						<span id="search-btn" class="input-group-addon"><i class="fa fa-search"></i></span>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div id="home-text" class="col-md-10 col-md-push-1">
-					<h2>Sunnah Source is a community managed resource allowing you to search the Quran, Sunnah and authentic works of Islamic scholars.</h2>
-					<h4>Want to contribute?  Login with your Facebook or Google at the top!</h4>
+					<h2>{{t 'ht1'}}</h2>
+					<h4>{{t 'ht2'}}</h4>
 				</div>
 			</div>
 		</div>
