--- a/client/views/tools.html
+++ b/client/views/tools.html
@@ -1,7 +1,14 @@
 <template name="tools">
-    <div id="main" class="nomenu">
+    <div id="main">
+		<div class="row menu">
+			<div class="container">
+				<div class="col-md-4 center">Hijri Converter</div>
+				<a href="/tools/pray"><div class="col-md-4 center">Prayer Times</div></a>
+				<a href="/tools/api"><div class="col-md-4 center">API</div></a>
+			</div>
+		</div>
 		<div class="container">
-			<div class="row center">
+			<div class="row mt30 center">
 				<div class="col offset-m3 m6">
 					{{> g2h }}
 					<br>
