update to sitetext and apidocs

--- a/client/views/toolsApi.html
+++ b/client/views/toolsApi.html
@@ -9,7 +9,16 @@
 		</div>
 		<div class="container">
 			<div class="row mt30">
-				<p>API coming soon..</p>
+				<div class="col-md-3"><code>/api/quran</code></div>
+				<div class="col-md-9">Return Quran data</div>
+			</div>
+			<div class="row mt30">
+				<div class="col-md-3"><code>/api/quran/(surah)</code></div>
+				<div class="col-md-9">Return entire surah content</div>
+			</div>
+			<div class="row mt30">
+				<div class="col-md-3"><code>/api/quran/(surah)/(ayah)</code></div>
+				<div class="col-md-9">Return ayah content</div>
 			</div>
 		</div>
 	</div>
