--- a/client/views/quran.css
+++ b/client/views/quran.css
@@ -1,3 +1,20 @@
 #qEdit th {
 	text-align: center;
 }
+
+.qseDiv {
+   display:inline-block;
+   border: solid 1px #999;
+   min-height: 1em;
+   width: 100%;
+   text-align: left;
+   margin: 5px;
+   padding: 5px;
+   background: #fff;
+}
+
+.dglow {
+  border-color: rgba(126, 239, 104, 0.8);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(126, 239, 104, 0.6);
+  outline: 0 none;
+}
